Modify authorization & associate activities to user